[gd_scene load_steps=10 format=3 uid="uid://f28lgpoq2hdn"]

[ext_resource type="Script" path="res://base_card.gd" id="1_envtt"]
[ext_resource type="FontVariation" uid="uid://xindnjsr4tie" path="res://fonts/jupiteroid_font.tres" id="2_8n5eh"]
[ext_resource type="Script" path="res://selected_icon.gd" id="3_jt4sv"]

[sub_resource type="Animation" id="Animation_gw7wm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6e6m7"]
resource_name = "pop_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -58)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i8cf6"]
_data = {
"RESET": SubResource("Animation_gw7wm"),
"pop_up": SubResource("Animation_6e6m7")
}

[sub_resource type="Animation" id="Animation_16mgd"]
resource_name = "hover"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.26667, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rmjyp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_572q1"]
_data = {
"RESET": SubResource("Animation_rmjyp"),
"hover": SubResource("Animation_16mgd")
}

[node name="BaseCard" type="Node2D"]
script = ExtResource("1_envtt")

[node name="Outline" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -114.0
offset_top = -94.0
offset_right = 163.0
offset_bottom = 185.0
color = Color(1, 0.954699, 0.910666, 1)

[node name="BackGroup" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-103, -83)

[node name="BackJanuary" type="Polygon2D" parent="BackGroup"]
color = Color(2.88785e-07, 0.566773, 0.869347, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackFebruary" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(1, 0.558485, 0.752343, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackMarch" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(1, 0.47771, 0.411264, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackApril" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(0.381427, 0.949236, 0.806042, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackMay" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(0.962536, 0.83906, 0.488443, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackJune" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(1, 0.04, 0.216, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackJuly" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(0.196391, 0.51614, 1, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackAugust" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(0.659809, 0.508313, 0.273387, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackSeptember" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(0.489446, 0.308875, 0.304742, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackOctober" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(0.815389, 0.41063, 5.77569e-07, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackNovember" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(0.712724, 0.223205, 0, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="BackDecember" type="Polygon2D" parent="BackGroup"]
visible = false
color = Color(0.165137, 0.311109, 1, 1)
polygon = PackedVector2Array(255, 0, 0, 0, 0, 255, 255, 255)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -100.0
offset_top = -83.0
offset_right = 120.0
offset_bottom = 192.0
theme_override_constants/separation = 30

[node name="MonthText" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MonthLabelNumber" type="Label" parent="VBoxContainer/MonthText"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8n5eh")
theme_override_font_sizes/font_size = 70
text = "(2)
"

[node name="MonthLabel" type="Label" parent="VBoxContainer/MonthText"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8n5eh")
theme_override_font_sizes/font_size = 60
text = "February"

[node name="EffectText" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EffectLabelAmount" type="Label" parent="VBoxContainer/EffectText"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.627451)
theme_override_fonts/font = ExtResource("2_8n5eh")
theme_override_font_sizes/font_size = 59
text = "+2"

[node name="EffectLabelType" type="Label" parent="VBoxContainer/EffectText"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.627451)
theme_override_fonts/font = ExtResource("2_8n5eh")
theme_override_font_sizes/font_size = 59
text = "turns"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_i8cf6")
}

[node name="SelectedIcon" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_jt4sv")

[node name="Polygon2D" type="Polygon2D" parent="SelectedIcon"]
polygon = PackedVector2Array(96, -107, 80, -102, 68, -91, 63, -73, 66, -47, 80, -27, 94, -14, 109, -9, 143, -15, 157, -22, 166, -30, 176, -43, 178, -56, 176, -75, 172, -98, 164, -107, 144, -109, 118, -108)

[node name="SelectedIconPolygon" type="Polygon2D" parent="SelectedIcon"]
position = Vector2(102, 56)
color = Color(1.63645e-06, 0.677877, 0.534922, 1)
polygon = PackedVector2Array(-29, -115, 13, -77, 63, -145, 44, -150, 11, -107, -16, -129)

[node name="SelectedAnimationPlayer" type="AnimationPlayer" parent="SelectedIcon"]
libraries = {
"": SubResource("AnimationLibrary_572q1")
}
